plugins {
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java'
}

group = 'com.andymur'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

tasks.withType(JavaExec) {
    jvmArgs '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
}

test {
    useJUnitPlatform()
}

dependencies {
    // Spring Boot Starter Web for REST APIs
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Boot Starter JDBC for database interaction
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    implementation ('org.apache.spark:spark-sql_2.13:3.5.1') {
        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j2-impl'
    }

    // PostgreSQL JDBC Driver (replace with your database if needed)
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    // Data manipulation
    implementation("org.apache.commons:commons-lang3:3.17.0")

    implementation("org.apache.commons:commons-text:1.13.1")

    // Apache Spark Core and SQL

    // Testing libraries
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation("org.junit.jupiter:junit-jupiter:5.12.2")
}

